--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,15 @@
 @import "null.scss";
 
+body {
+    color: #1D1D39;
+}
+
 .container {
     max-width: 1280px;
     margin: 0 auto;
 
     @media screen and (max-width:1280px) {
-        padding: 0px 15px;
+        padding: 0px 20px;
     }
 }
 
@@ -73,6 +77,7 @@
         opacity: 0;
         overflow-x: hidden;
         transition: all .3s ease;
+        z-index: 10;
 
         &.active {
             top: 80px;
@@ -1314,6 +1319,7 @@ img {
 @mixin flex-center {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .footer-bottom {
@@ -1620,7 +1626,7 @@ img {
     }
 
     .content {
-        padding: 50px 15px;
+        padding: 50px 20px;
     }
 
     .group-user-table-item-form__buttons {
@@ -1643,3 +1649,388 @@ img {
         width: 367px;
     }
 }
+
+.footer {
+    background-color: #fff;
+}
+
+// Админ панель информация
+
+.admin-container {
+    max-width: 1820px;
+    padding: 0px 20px;
+}
+
+.admin-panel__container {
+    max-width: 1820px;
+    padding: 100px 20px;
+    margin: auto;
+}
+
+.admin-panel-content {
+    padding: 0px 30px;
+    padding-right: 0px;
+}
+
+.admin-panel-content {
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background: #FFFFFF;
+    border-radius: 12px;
+    height: 100%;
+}
+
+.admin-panel-content__aside {
+    flex: 0 1 16%;
+    padding: 50px 0px;
+}
+
+.admin-panel-content-aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 100%;
+    gap: 30px;
+    padding-right: 30px;
+}
+
+.admin-panel-vertical-line {
+    position: absolute;
+    height: 100%;
+    width: 1px;
+    background-color: rgba(29, 29, 57, 0.15);
+    left: 274px;
+    top: 0;
+}
+
+.admin-panel-content-aside__item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
+
+    .admin-panel-content-aside__item-icon, .admin-panel-content-aside__item-icon svg path,
+    .admin-panel-content-aside__item-icon svg circle {
+        @include transition();
+    }
+
+    &:hover .admin-panel-content-aside__item-icon {
+        background-color: #6C63FF;
+        border-color: transparent;
+    }
+
+    &:hover .admin-panel-content-aside__item-icon svg path, &:hover .admin-panel-content-aside__item-icon svg circle {
+        stroke: #fff;
+    }
+}
+
+.admin-panel-content-aside__item-icon {
+    @include flex-center();
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border: 1px solid rgba(29, 29, 57, 0.25);
+    border-radius: 100%;
+}
+
+.admin-panel-content-aside__item__name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+}
+
+.admin-panel-content__content {
+    @include gap-column(50px);
+    width: 100%;
+}
+
+.admin-panel-content-aside-header {
+    position: relative;
+}
+
+.admin-panel-content-aside-header__container {
+    padding: 50px;
+    @include gap-column(15px);
+}
+
+.admin-panel-content-aside-header__title {
+    font-weight: 700;
+    font-size: 64px;
+}
+
+.admin-panel-line {
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    background-color: rgba(29, 29, 57, 0.15);
+    left: 0;
+    bottom: 0;
+}
+
+.admin-panel-content__info-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px 50px;
+    gap: 30px;
+}
+
+.admin-panel-content-info-item {
+    height: 153px;
+    padding: 20px;
+    @include gap-column(15px);
+    align-items: center;
+    text-align: center;
+    background: #6C63FF;
+    color: #ffffff;
+    border-radius: 8px;
+    flex: 0 1 268px;
+}
+
+.admin-panel-content-info-item__title {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50px;
+}
+
+.admin-panel-content-info-item__subtitle {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.admin-panel-info__tables {
+    padding: 50px;
+    padding-top: 0px;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.admin-panel-info__new-users {
+    flex: 0 1 50%;
+}
+
+.admin-panel-info-new-users__container {
+    padding-bottom: 20px;
+    border: 1px solid rgba(29, 29, 57, 0.15);
+    border-radius: 12px;
+}
+
+.admin-panel-info-new-users__header {
+    padding: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.admin-panel-info-new-users__title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 130%;
+}
+
+.admin-panel-info-new-users__link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+    color: #6C63FF;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+
+    span {
+        @include transition();
+    }
+
+    &:hover span{
+        transform: translateX(-5px);
+    }
+}
+
+html, body {
+    height: 100%;
+}
+
+.new-users-table {
+    display: flex;
+    flex-direction: column;
+}
+
+.new-users-table__item {
+    display: flex;
+    text-align: left;
+    gap: 15px;
+    padding: 20px 40px;
+    text-align: left;
+    border-top: 1px solid rgba(29, 29, 57, 0.15);
+}
+
+.new-users-table__name:first-child {
+    flex: 0 1 10%;
+}
+
+.new-users-table__name {
+    min-width: 0px;
+    flex: 0 1 22%;
+    text-align: left;
+    display: flex;
+    justify-content: flex-start;
+    word-break: break-all;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+}
+
+.new-users-table__header {
+    .new-users-table__name {
+        font-weight: 700;
+    }
+}
+
+.admin-panel-info-new-groups {
+    flex: 0 1 48.8%;
+}
+
+@media (max-width: 1700px) {
+
+    .admin-panel-content__info-list {
+        flex-wrap: wrap;
+    }
+
+    .admin-panel-info__tables {
+        flex-wrap: wrap;
+    }
+
+    .admin-panel-info__new-users {
+        flex-basis: 100%;
+    }
+
+    .admin-panel-info-new-groups {
+        flex-basis: 100%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .admin-panel-content-aside-header__title {
+        font-size: 54px !important;
+    }
+}
+
+@media (max-width: 975px) {
+    .admin-panel-content-info-item {
+        flex-basis: 100%;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .admin-panel-content {
+        flex-direction: column;
+    }
+
+    .admin-panel-content-aside {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .admin-panel-content-aside-header__container {
+        padding-left: 0px;
+    }
+
+    .admin-panel-content__info-list {
+        padding-left: 0px;
+        padding-right: 30px;
+    }
+
+    .admin-panel-info__tables {
+        padding-left: 0px;
+        padding-right: 30px;
+    }
+
+    .admin-panel-vertical-line {
+        top: 250px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+    }
+}
+
+@media (max-width: 684px) {
+    .admin-panel-vertical-line {
+        top: 340px;
+    }
+}
+
+@media (max-width: 600px)  {
+    .admin-panel-content-aside-header__title {
+        font-size: 36px !important;
+    }
+    .admin-panel-info-new-users__header {
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+}
+
+@media (max-width: 518px) {
+    .admin-panel-vertical-line {
+        top: 430px;
+    }
+}
+
+
+@media (max-width: 480px) {
+    .admin-panel__container {
+        padding: 50px 0px;
+    }
+
+    .admin-panel-content {
+        padding: 0px 20px;
+    }
+
+    .admin-panel-content__info-list, .admin-panel-info__tables {
+        padding-right: 0;
+    }
+
+    .admin-panel-info__new-users, .admin-panel-info-new-groups{
+        overflow: auto;
+    }
+
+    .new-users-table {
+        width: 438px;
+    }
+
+    .admin-panel-info-new-users__container {
+        border: none;
+    }
+
+    .admin-panel-info-new-users__header {
+        padding: 40px 0px;
+    }
+    
+    .new-users-table__item {
+        padding: 20px 0px;
+    }
+}
+
+@media (max-width: 422px) {
+    .admin-panel-vertical-line {
+        top: 520px;
+    }
+}
+
+@media (max-width: 402px) {
+    .admin-panel-vertical-line {
+        top: 610px;
+    }
+}
+
+@media (max-width: 380px) {
+    .admin-panel-content-aside-header__title {
+        word-break: break-all;
+    }
+} 
